# windows_gpu_recovery

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example_with_recovery/: pubspec.yaml
example_with_recovery/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
example_without_recovery/: README.md  pubspec.yaml
example_without_recovery/lib/: main.dart
example_without_recovery/windows/: CMakeLists.txt
example_without_recovery/windows/runner/: Runner.rc  main.cpp
lib/: windows_gpu_recovery.dart
windows/: CMakeLists.txt  windows_gpu_recovery_plugin.cpp  windows_gpu_recovery_plugin.h  windows_gpu_recovery_plugin_c_api.cpp
windows/include/windows_gpu_recovery/: gpu_recovery_message.h  windows_gpu_recovery_plugin_c_api.h
